Buyer.js: Added alert. Took off borders.

--- a/src/components/Buyer.css
+++ b/src/components/Buyer.css
@@ -1,14 +1,3 @@
-.ItemCol {
-    max-width: 100%;
-}
-.TrayCol {
-    display: block;
-    max-height: 100%;
-    text-align: center;
-    border-style: outset;
-    padding: 5px;
-}
-
 .Buyer-container {
     max-width: 100%;
     height: 100%;
@@ -16,10 +5,9 @@
     clear: both;
 }
 
-.col-item {
-    margin: auto;
-    display: block;
-}
-.col-del {
-    text-align: right;
+.alert {
+    width: 30%;
+    position: fixed;
+    top: 30%;
+    left: 35%;
 }
