Buyer Component: Added palceholders for Alert message, Place Order Button and Total Price.

--- a/src/components/Buyer.css
+++ b/src/components/Buyer.css
@@ -5,6 +5,18 @@
     clear: both;
 }
 
+#TotalPrice {
+    font-size: 50px;
+}
+table td {
+    width: 33%;
+    overflow: hidden;
+    display: inline-block;
+    white-space: nowrap;
+}
+.trayCol{
+    max-width:50%;
+}
 .alert {
     width: 30%;
     position: fixed;
