--- a/src/components/Buyer.css
+++ b/src/components/Buyer.css
@@ -1,3 +1,14 @@
+.ItemCol {
+    max-width: 100%;
+}
+.TrayCol {
+    display: block;
+    max-height: 100%;
+    text-align: center;
+    border-style: outset;
+    padding: 5px;
+}
+
 .Buyer-container {
     max-width: 100%;
     height: 100%;
@@ -5,21 +16,10 @@
     clear: both;
 }
 
-#TotalPrice {
-    font-size: 50px;
+.col-item {
+    margin: auto;
+    display: block;
 }
-table td {
-    width: 33%;
-    overflow: hidden;
-    display: inline-block;
-    white-space: nowrap;
-}
-.trayCol{
-    max-width:50%;
-}
-.alert {
-    width: 30%;
-    position: fixed;
-    top: 30%;
-    left: 35%;
+.col-del {
+    text-align: right;
 }
