--- a/src/components/Buyer.css
+++ b/src/components/Buyer.css
@@ -1,7 +1,4 @@
-.ItemCol {
-    max-width: 100%;
-}
-.TrayCol {
+.TrayCol, .ItemCol {
     display: block;
     max-height: 100%;
     text-align: center;
@@ -22,4 +19,11 @@
 }
 .col-del {
     text-align: right;
+}
+
+.alert {
+    width: 40%;
+    position: fixed;
+    top: 30%;
+    left: 33%;
 }
