--- a/src/components/Buyer.css
+++ b/src/components/Buyer.css
@@ -1,12 +1,21 @@
 .PanelCol{
     display: block;
     max-height: 100%;
+    max-width: 45%;
     text-align: center;
-    border-style: outset;
-    padding: 5px;
+    border-style: solid;
+    border-radius: 5px;
+    border-width: 1px;
+    margin: 1%;
+}
+
+.header li{
+    display: inline;
+    margin: 5px;
 }
 
 .container {
+    text-align: left;
     max-width: 100%;
     height: 100%;
     display: block;
