--- a/src/components/VendItem.css
+++ b/src/components/VendItem.css
@@ -2,7 +2,9 @@
     display: block;
     max-width: 100%;
     text-align: center;
-    border-style: outset;
+    border-style: solid;
+    border-radius: 5px;
+    border-width: 1px;
     padding: 5px;
 }
 
@@ -11,6 +13,10 @@
     height: 100%;
     display: block;
     clear: both;
+}
+
+.container .header {
+    text-align: left;
 }
 
 .VendPanel ul li {
