--- a/src/components/Buyer.css
+++ b/src/components/Buyer.css
@@ -9,11 +9,19 @@
     margin: 1%;
 }
 
+img {
+    width: 120px;
+    height: 120px;
+    border-radius: 25px;
+}
 .header li{
     display: inline;
     margin: 5px;
 }
 
+.card {
+    text-align: left;
+}
 .container {
     text-align: left;
     max-width: 100%;
