--- a/src/components/VendItem.css
+++ b/src/components/VendItem.css
@@ -1,11 +1,15 @@
 .VendPanel {
+    top: 30%;
     display: block;
     max-width: 100%;
+    position: initial;
+    height: auto;
     text-align: center;
     border-style: solid;
     border-radius: 5px;
     border-width: 1px;
     padding: 5px;
+    margin: 50px;
 }
 
 .container {
